overlays/test/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
resources:
- ../../base
patchesStrategicMerge:
- route-backend.yaml
namePrefix: test-
images:
- name: quay.io/fmwalker/kafd-backend
  newTag: "5133865"
- name: registry-quay-quay-enterprise.apps.mgt.scp.gcp1.kafd.sa/pipelines/backend-application
  newTag: ef2746b
