overlays/test/route-backend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend
spec:
  to:
    name: test-backend
